# ros-chess-challenge

./: .gitmodules  README.md
chess/: CMakeLists.txt  package.xml  spectator_node.py
chess/launch/: chess.launch
chess/msg/: Chessboard.msg  Chesspiece.msg  Move.msg  Player.msg
stockfish/: CMakeLists.txt  package.xml  stockfish_starter.sh
stockfish/launch/: stockfish.launch
